--- a/index.html
+++ b/index.html
@@ -8,23 +8,34 @@
 <body>
   <h1>Welcome to My Projects</h1>
   <ul id="projects-list">
-    <!-- Projects will load here -->
+   
   </ul>
 
   <script>
-    const username = "cloudora1"; // change this to your GitHub username
-    fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
-      .then(response => response.json())
-      .then(repos => {
-        const list = document.getElementById("projects-list");
-        repos.forEach(repo => {
-          if (!repo.fork) { // skip forks
-            const li = document.createElement("li");
-            li.innerHTML = `<a href="${repo.html_url}" target="_blank">${repo.name}</a> - ${repo.description || "No description"}`;
-            list.appendChild(li);
+  const username = "cloudora1"; 
+
+  fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
+    .then(response => response.json())
+    .then(repos => {
+      const list = document.getElementById("projects-list");
+      repos.forEach(repo => {
+        if (!repo.fork) {
+          const li = document.createElement("li");
+          
+          // Default: link to repo
+          let projectLink = repo.html_url;
+
+          // If repo has GitHub Pages enabled, link to website
+          if (repo.has_pages) {
+            projectLink = `https://${username}.github.io/${repo.name}`;
           }
-        });
+
+          li.innerHTML = `<a href="${projectLink}" target="_blank">${repo.name}</a> - ${repo.description || "No description"}`;
+          list.appendChild(li);
+        }
       });
-  </script>
+    });
+</script>
+
 </body>
 </html>
