--- a/index.html
+++ b/index.html
@@ -7,35 +7,33 @@
 </head>
 <body>
   <h1>Welcome to My Projects</h1>
-  <ul id="projects-list">
-   
+
+  <!-- ✅ Custom Links Section -->
+  <h2>Other Projects (Outside GitHub)</h2>
+  <ul id="custom-projects">
+    <li><a href="https://mycoolapp.netlify.app" target="_blank">Cool App</a> - Hosted on Netlify</li>
+    <li><a href="https://anotherproject.com" target="_blank">Another Project</a> - Hosted outside GitHub</li>
   </ul>
 
+  <!-- ✅ GitHub Projects Section -->
+  <h2>All My GitHub Projects</h2>
+  <ul id="repos-list"></ul>
+
   <script>
-  const username = "cloudora1"; 
+    const username = "cloudora1"; // change this to your GitHub username
 
-  fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
-    .then(response => response.json())
-    .then(repos => {
-      const list = document.getElementById("projects-list");
-      repos.forEach(repo => {
-        if (!repo.fork) {
-          const li = document.createElement("li");
-          
-          // Default: link to repo
-          let projectLink = repo.html_url;
-
-          // If repo has GitHub Pages enabled, link to website
-          if (repo.has_pages) {
-            projectLink = `https://${username}.github.io/${repo.name}`;
+    fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
+      .then(response => response.json())
+      .then(repos => {
+        const list = document.getElementById("repos-list");
+        repos.forEach(repo => {
+          if (!repo.fork) {
+            const li = document.createElement("li");
+            li.innerHTML = `<a href="${repo.html_url}" target="_blank">${repo.name}</a> - ${repo.description || "No description"}`;
+            list.appendChild(li);
           }
-
-          li.innerHTML = `<a href="${projectLink}" target="_blank">${repo.name}</a> - ${repo.description || "No description"}`;
-          list.appendChild(li);
-        }
+        });
       });
-    });
-</script>
-
+  </script>
 </body>
 </html>
