--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
   <h1>Welcome to My Projects</h1>
 
-  <!-- ✅ Custom Links Section -->
-  <h2>Other Projects (Outside GitHub)</h2>
+  
+  <h2>Other Projects</h2>
   <ul id="custom-projects">
-    <li><a href="https://mycoolapp.netlify.app" target="_blank">Cool App</a> - Hosted on Netlify</li>
-    <li><a href="https://anotherproject.com" target="_blank">Another Project</a> - Hosted outside GitHub</li>
+    <li><a href="notepadd.vercel.app" target="_blank">Notepad App</a> - Hosted on Vercel</li>
+    
   </ul>
 
-  <!-- ✅ GitHub Projects Section -->
+  
   <h2>All My GitHub Projects</h2>
   <ul id="repos-list"></ul>
 
   <script>
-    const username = "cloudora1"; // change this to your GitHub username
+    const username = "cloudora1"; 
 
     fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
       .then(response => response.json())
