--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <h2>Other Projects</h2>
   <ul id="custom-projects">
-    <li><a href="notepadd.vercel.app" target="_blank">Notepad App</a> - Hosted on Vercel</li>
+    <li><a href="https://notepadd.vercel.app" target="_blank">Notepad App</a> - Hosted on Vercel</li>
     
   </ul>
 
