--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <script>
-    const username = "cloudora1";
+    const username = "ermunsana";
 
     fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
       .then(response => response.json())
