--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to My Projects</h1>
+    <h1>My Projects</h1>
 
     <h2>Other Projects</h2>
     <ul id="custom-projects">
